Refactor: Improve error handling and add logging
Decouple GameAPIService from the UI by replacing JOptionPane calls with thrown exceptions.

Add java.util.logging.Logger to both GameAPIService and GameController for robust error logging.

The controller now catches exceptions from the service layer to display user-friendly error messages.

Simplify exception handling within GameAPIService.