@@ -8,40 +8,37 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+import java.util.logging.Logger;
 
 /**
  * Handles communication with the external game API to fetch questions
  */
 public class GameAPIService {
 
+    private static final Logger logger = Logger.getLogger(GameAPIService.class.getName());
+
     /**
      * Reads the content from a given URL and returns it as a String
      * @param urlString The URL to read from
      * @return The content of the URL as a String, or null if an error occurs
      */
-    private static String readUrl(String urlString)  {
-        try {
-            URL url = new URI(urlString).toURL();
-            InputStream inputStream = url.openStream();
+    private static String readUrl(String urlString) throws IOException {
+        URL url = new URL(urlString);
 
-            // Choose anyone of
-            // https://stackoverflow.com/questions/309424/how-do-i-read-convert-an-inputstream-into-a-string-in-java
-            // to convert InputStream to String.
-            ByteArrayOutputStream result = new ByteArrayOutputStream();
+        try (InputStream inputStream = url.openStream();
+             ByteArrayOutputStream result = new ByteArrayOutputStream()) {
             byte[] buffer = new byte[1024];
             int length;
             while ((length = inputStream.read(buffer)) != -1) {
                 result.write(buffer, 0, length);
             }
-            return result.toString("UTF-8");
-        } catch (Exception e) {
-            /* TODO: proper exception handling when URL cannot be read. */
-            System.out.println("An error occurred: " + e.toString());
-            e.printStackTrace();
-            return null;
+            return result.toString(StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            logger.severe("Error reading from URL: " + urlString + " - " + e.getMessage());
+            throw new IOException ("An error occurred while reading URL: " + urlString, e);
         }
     }
 
@@ -49,23 +46,46 @@ public class GameAPIService {
      * Fetches a random game question from the API
      * @return A new Question object or null if an error occurs
      */
-    public Question getRandomGame() {
-        // See http://marconrad.com/uob/tomato for details of usage of the api.
+    public Question getNewQuestion() throws IOException {
 
-        String tomatoAPI = "https://marcconrad.com/uob/heart/api.php?out=csv&base64=yes";
-        String dataRaw = readUrl(tomatoAPI);
-        if (dataRaw != null) {
-            String[] data = dataRaw.split(",");
-            byte[] decodeImg = Base64.getDecoder().decode(data[0]);
-            ByteArrayInputStream quest = new ByteArrayInputStream(decodeImg);
-            int solution = Integer.parseInt(data[1]);
-            try {
-                BufferedImage img = ImageIO.read(quest);
-                return new Question(img, solution);
-            } catch (IOException e1) {
-                e1.printStackTrace();
+        String heartAPI = "https://marcconrad.com/uob/heart/api.php?out=csv&base64=yes";
+        String dataRaw;
+        String[] data;
+        BufferedImage image;
+        int solution;
+
+        try {
+            dataRaw = readUrl(heartAPI);
+            if (dataRaw == null || dataRaw.isBlank()) {
+                throw new IOException("Empty or null API response");
             }
+
+            data = dataRaw.split(",");
+            if (data.length < 2) {
+                throw new IOException("Unexpected API response format");
+            }
+
+            byte[] decodedImg = Base64.getDecoder().decode(data[0]);
+            try (ByteArrayInputStream quest = new ByteArrayInputStream(decodedImg)) {
+                image = ImageIO.read(quest);
+                if (image == null) {
+                    throw new IOException("Image could not be decoded");
+                }
+            }
+
+            try {
+                solution = Integer.parseInt(data[1].trim());
+                if (solution < 0 || solution > 9) {
+                    throw new IllegalArgumentException("Solution out of expected range (0-9)");
+                }
+            } catch (NumberFormatException e) {
+                logger.severe("Unexpected solution format received from API: " + e.getMessage());
+                throw new IOException("Invalid solution format in API response", e);
+            }
+            return new Question(image, solution);
+        } catch (IOException e) {
+            logger.severe("Failed to parse game data from API: " + e.getMessage());
+            throw new IOException("Failed to read or parse game data from API", e);
         }
-        return null;
     }
 }
